--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -1,34 +1,42 @@
-/* boxed list structure of places */
+
+/* flexbox - places */
 .places {
-    text-align: center;
-  }
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 100%;
+}
   .places h1 {
+    flex-basis: 100%;
     font-size: 30px;
     text-align: left;
   }
   article {
-    width: 390px;
+    flex-basis: 60%;
+    flex-direction: row;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
     padding: 20px;
     margin: 20px;
-    display: inline-block;
-    min-height: 250px;
-    vertical-align: top;
+    /* align-content: flex-start;
+    align-items: flex-start; */
+    
   }
   article h2 {
     font-size: 30px;
     margin-top: 5px;
+    text-align: center;
   }
   /* structure within boxed lists of places */
   div.price_by_night {
-  color: #FF5A5F;
+    color: #FF5A5F;
     border: 4px solid #FF5A5F;
-    border-radius: 100%;
+    border-radius: 50%;
     min-width: 60px;
     height: 60px;
     line-height: 60px;
     font-size: 30px;
+    justify-content: center;
     position: relative;
     float: right;
     top: -80px; 
