--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -6,45 +6,58 @@
   justify-content: center;
   width: 100%;
 }
-  .places h1 {
-    flex-basis: 100%;
-    font-size: 30px;
-    text-align: left;
-  }
-  article {
-    flex-basis: 60%;
-    flex-direction: row;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    padding: 20px;
-    margin: 20px;
+.places h1 {
+  flex-basis: 100%;
+  font-size: 30px;
+  text-align: left;
+}
+.places article {
+  flex-basis: 390px;
+  flex-direction: row;
+  border: 1px solid #FF5A5F;
+  border-radius: 4px;
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
     /* align-content: flex-start;
     align-items: flex-start; */
-    
-  }
-  article h2 {
-    font-size: 30px;
-    margin-top: 5px;
-    text-align: center;
-  }
-  /* structure within boxed lists of places */
-  div.price_by_night {
+}
+.places article .places_top{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.places article h2 {
+  font-size: 30px;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 5;
+}
+.places article .price_by_night {
     color: #FF5A5F;
     border: 4px solid #FF5A5F;
-    border-radius: 50%;
+    border-radius: 100%;
     min-width: 60px;
     height: 60px;
     line-height: 60px;
     font-size: 30px;
+    display: flex;
     justify-content: center;
-    position: relative;
-    float: right;
-    top: -80px; 
+    align-items: center;
+    flex: 1;
+      
   }
-  div.information {
-    height: 80px;
+  .places article .information {
+    height: 100%;
     border-top: 1px solid #DDDDDD;
     border-bottom: 1px solid #DDDDDD;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
   }
   div.max_guest,
   div.number_rooms,
@@ -52,8 +65,9 @@
     line-height: 140px;
     width: 100px;
     height: 100%;
-    display: inline-block;
-    background-position: 50% 5px;
+    display: flex;
+    flex-direction: row;
+    /* background-position: 50% 5px; */
     background-repeat: no-repeat;
   }
   .max_guest {
@@ -67,14 +81,17 @@
   }
   div.user,
   div.description {
-    text-align: left;
+    display: flex;
+    align-items: flex-start;
     margin-bottom: 10px;
     margin-top: 10px;
   }
 /* Amenity and Reviews */
 .places article .amenities,
 .places article .reviews{
-  text-align: left;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 	margin: 40px 0 40px;
 	width: 100%;
 	padding: 0;
@@ -84,11 +101,14 @@
 .places article .reviews h2{
 	size: 16px;	
 	border-bottom: 1px solid #DDDDDD;
+  justify-content: flex-start;
 }
 .places article .amenities ul,
 .places article .reviews ul{
   padding: 0;
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
  .places article .amenities ul li,
