--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -1,119 +1,119 @@
-/* search bar */
-/* div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    /* text-align: center; */
-} */
 section.filters {
-    background-color: #FFFFFF;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+  background-color: #FFFFFF;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
 }
 
 section.filters:before,
 section.filters:after {
-  content: "";
-  display: table;
+content: "";
+display: table;
 }
 
 section.filters:after {
-  clear: both;
+clear: both;
 }
 
 section.filters {
-  *zoom: 1;
+*zoom: 1;
 }
 section.filters button {
-    background-color: #FF5A5F;
-    height: 48px;
-    width: 20%;
-    border: 0;
-    border-radius: 4px;
-    font-size: 18px;
-    color: #FFFFFF;
-    float: right;
-    margin: 11px 30px;
+  background-color: #FF5A5F;
+  height: 48px;
+  width: 20%;
+  border: 0;
+  border-radius: 4px;
+  font-size: 18px;
+  color: #FFFFFF;
+  float: right;
+  margin: 11px 30px;
 }
 section.filters button:hover {
-    opacity: .9;
+  opacity: .9;
 }
 /* location and amenities part of search bar */
 .locations,
 .amenities {
-    height: 100%;
-    width: 25%;
-    float: left;
+  height: 100%;
+  width: 25%;
+  float: left;
 }
 .locations {
-    border-right: 1px solid #DDDDDD;
+  border-right: 1px solid #DDDDDD;
 }
 .locations h3,
 .amenities h3 {
-    font-weight: 600;
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
+  font-weight: 600;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  text-align: left;
+  margin-left: 30px;
 }
 .locations h4,
 .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
+  font-weight: 400;
+  font-size: 14px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: left;
+  margin-left: 30px;
 }
 /* display location and amenities options upon hover */
 .popover {
-    display: none;
-    background-color: #FAFAFA;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    position: absolute;
-    display: none;
-    width: 100%;
-    /* z-index: 1; */
+  display: none;
+  background-color: #FAFAFA;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px;
+  position: absolute;
+  display: none;
+  width: 100%;
+  /* z-index: 1; */
 }
 .popover h2 {
-    font-size: 16px;
+  font-size: 16px;
+  
 }
 li {
-    list-style-type: none;
-    margin-top:10px;
-    margin-bottom: 10px;
+  list-style-type: none;
+  margin-top:10px;
+  margin-bottom: 10px;
 }
 .locations:hover .popover,
 .amenities:hover .popover {
-    display: block;
+  display: block;
 }
 
 /* Swap to vertical layout for small screens */
 @media only screen and (max-width: 720px) {
-    .filters {
-      display: grid;
-      height: 210px;
-    }
-  
-    .filters .locations,
-    .filters .amenities {
-      height: 70px;
-      width: 100%;
-      border-bottom: 1px solid #DDDDDD;
-    }
-  
-    .filters .locations:hover .popover,
-    .filters .amenities:hover .popover {
-      margin-left: auto;
-      position: relative;
-      width: 50%;
-      z-index: 1;
-    }
-  
-    .filters .amenities:hover {
-      border-top: 1px solid #DDDDDD;
-    }
+  .filters {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+  }
+  section.filters button {
+      flex: 1;
+  }
+
+  .filters .locations,
+  .filters .amenities {
+    flex: 2;
+    height: auto;
+    width: 50%;
+    border-bottom: 1px solid #DDDDDD;
+  }
+
+  .filters .locations:hover .popover,
+  .filters .amenities:hover .popover {
+    margin-left: auto;
+    position: relative;
+    width: 50%;
+    z-index: 1;
+  }
+
+  .filters .amenities:hover {
+    border-top: 1px solid #DDDDDD;
+  }
 }
