--- a/web_static/styles/103-common.css
+++ b/web_static/styles/103-common.css
@@ -1,6 +1,8 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    width: 100%;
     color: #484848;
     font-size: 14px;
     font-family: Circular, "Helvetica Neue", Arial, sans-serif;
