--- a/web_static/styles/102-places.css
+++ b/web_static/styles/102-places.css
@@ -151,6 +151,7 @@ footer {
  /* Align header 1 as screen gets smaller */
 @media only screen and (max-width: 1000px) {
   .places h1 {
-    width: 95%;
+    width: 90%;
+    margin: 5%;
   }
 }
